# smb_common_v2

./: README.md
smb_description/resources/: smb.urdf
smb_description/urdf/: smb_utils.urdf.xacro
smb_description/urdf/meshes/: wheel.dae
smb_description/urdf/new_payload/meshes/: SMB_blackfly_camera.dae
smb_description/urdf/sensor_plugins/: smb_blackfly.gazebo.xacro
smb_gazebo/: CMakeLists.txt  package.xml
smb_gazebo/include/smb_gazebo/: OdometrySource.hpp
smb_gazebo/launch/: smb_gazebo.launch
smb_gazebo/script/: moveToGoal.py  pillar_position.py
smb_gazebo/src/: OdometrySource.hpp
smb_gazebo/worlds/: publisher_marker.py  publisher_move.py
